--- a/public/signup.css
+++ b/public/signup.css
@@ -46,12 +46,13 @@ body{
   align-items: top;
   justify-content: center;
   position:absolute;
-  margin:0px;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   border-radius: 0px;
+  margin-bottom: 60px;
+
 }
 .center h1{
   text-align:center;
@@ -69,8 +70,9 @@ body{
     justify-content: center;
     position: relative;
     flex-direction: column;
+    margin-top: 70px;
     width: 440px;
-    height: 480px;
+    height: 440px;
     padding: 30px;
     background-color: #D9D8CE;
 
